# dxf2image

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
bitmap/: Cargo.toml
bitmap/src/: lib.rs
bitmapx/: Cargo.toml  README.md
examples/: png.rs  svg.rs
examples/dxf/: sample.dxf
src/: color.rs  coord.rs  dxf2svg.rs  lib.rs
svg/: Cargo.toml
svg/src/: document.rs  lib.rs
svg/src/nodes/: circle.rs  polyline.rs
svgx/: Cargo.toml  README.md
svgx/src/nodes/: circle.rs  ellipse.rs  line.rs  mod.rs  path.rs  polyline.rs  text.rs
