[package]
name = "dxf2image"
version = "0.1.0"
authors = ["Kohei Fujino <appleblueberrycherry@gmail.com>"]
edition = "2018"
readme = "README.md"
categories = ["multimedia::images", "rendering"]
keywords = ["cad", "dxf", "svg", "png", "graphics"]
license-file = "LICENSE"
description = "dxf2image is a fast and efficient dxf to image converter!"
repository = "https://github.com/k-fujino-kohei/dxf2image"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dxf = { git = "https://github.com/ixmilia/dxf-rs", branch = "main" }
svg = { path = "./svg", version = "0.1.0" }
bitmap = { path = "./bitmap", version = "0.1.0", optional = true }

[features]
default = []
png = ["bitmap"]
