[package]
name = "bitmap"
version = "0.1.0"
authors = ["Kohei Fujino <appleblueberrycherry@gmail.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
resvg = "0.18.0"
usvg = "0.18.0"
tiny-skia = "0.6.1"
