[package]
name = "bitmapx"
version = "0.1.0"
authors = ["Kohei Fujino <appleblueberrycherry@gmail.co.jp>"]
edition = "2018"
readme = "README.md"
categories = ["multimedia::images", "rendering"]
keywords = ["svg", "png", "graphics"]
license-file = "LICENSE"
description = "convert svg to bitmap"
repository = "https://github.com/k-fujino-kohei/dxf2image"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
resvg = "0.18.0"
usvg = "0.18.0"
tiny-skia = "0.6.1"
