[package]
name = "svgx"
version = "0.1.0"
authors = ["Kohei Fujino <appleblueberrycherry@gmail.com>"]
edition = "2018"
readme = "README.md"
categories = ["multimedia::images"]
keywords = ["svg"]
license-file = "LICENSE"
description = "simple svg builder"
repository = "https://github.com/k-fujino-kohei/dxf2image"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "0.10.0"
anyhow = "1.0"
